--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  },
+
+"name": "todo-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+
+
+  "devDependencies": {
+    "nodemon": "^3.1.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mongoose": "^8.9.4"
   }
 }
+
