--- a/amplify.yml
+++ b/amplify.yml
@@ -1,16 +1,18 @@
 version: 1
-frontend:
-  phases:
-    preBuild:
-      commands:
-        - npm ci
-    build:
-      commands:
-        - npm run build
-  artifacts:
-    baseDirectory: build
-    files:
-      - '**/*'
-  cache:
-    paths:
-      - node_modules/**/*
+applications:
+  - frontend:
+      phases:
+        preBuild:
+          commands:
+            - cd todo_frontend
+            - npm i
+        build:
+          commands:
+            - npm run build
+      artifacts:
+        baseDirectory: todo_frontend/build
+        files:
+          - '**/*'
+      cache:
+        paths:
+          - todo_frontend/node_modules/**/*
